--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
   "dependencies": {
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
+    "katex": "^0.12.0",
+    "markdown-it": "^12.0.2",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-texmath": "^0.8.0",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "sass": "^1.29.0"
+  },
+  "devDependencies": {
+    "@types/katex": "^0.11.0",
+    "@types/markdown-it": "^10.0.3",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.0.5"
   }
 }
